fix mobile; set overflow to zero

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -79,12 +79,24 @@ hr {
   margin-bottom: 5px;
   text-align: center;
   padding: 0 4%;
-}*/
+}
 
-.container p, .container ol, .container ul {
+.container ul {
   font-size: 17px;
   padding: 0 5%;
 }
+
+.container ol {
+  font-size: 17px;
+  padding: 0 5%;
+}
+
+.container p {
+  overflow:hidden;
+  font-size: 17px;
+  padding: 0 5%;
+}
+
 .container ol, .container ul { padding: 0 8%; }
 .container p:first-of-type {
     margin-top: 40px;
@@ -198,7 +210,6 @@ nav ul li:hover, nav ul li.active {
 
 #header {
   position: fixed;
-  display: inline-block;
   top: 0;
   left: 0;
   padding: 20px 0;
@@ -280,7 +291,7 @@ nav ul li:hover, nav ul li.active {
   -webkit-transition: opacity 0.3s;
 }
 
-a.buttonimg:hover img{
+.buttonimg:hover img{
   opacity: 0.5;
 }
 
@@ -300,49 +311,6 @@ a.buttonimg:hover img{
 .longlist { font-size: 14px !important; }
 .longlist li { margin-bottom: 3px; }
 
-/* ----- fork on github banner ----- */
-#forkongithub a {
-  color:#fff;
-  text-decoration:none;
-  font-family:arial,sans-serif;
-  text-align:center;
-  font-weight:700;
-  font-size:1rem;
-  line-height:2rem;
-  position:relative;
-  transition:.5s;
-  padding:5px 40px;
-}
-#forkongithub a::before, #forkongithub a::after {
-  content:""; width:100%; display:block; position:absolute;
-  top:1px; left:0; height:1px; background:#fff;
-}
-#forkongithub a::after { bottom:1px; top:auto; }
-@media screen and (min-width:800px) {
-  #forkongithub {
-    position:fixed;
-    display:block;
-    top:0;
-    right:0;
-    width:200px;
-    overflow:hidden;
-    height:200px;
-    z-index:9999;
-  }
-  #forkongithub a {
-    width:200px;
-    position:absolute;
-    top:60px;
-    right:-60px;
-    transform:rotate(45deg);
-    -webkit-transform:rotate(45deg);
-    -ms-transform:rotate(45deg);
-    -moz-transform:rotate(45deg);
-    -o-transform:rotate(45deg);
-    box-shadow:4px 4px 10px rgba(0,0,0,0.8);
-    box-sizing: content-box;
-  }
-}
 
 /* mid size (tablets, landscapes) */
 @media only screen and (max-width: 679px) {
